--- a/index.html
+++ b/index.html
@@ -15,17 +15,53 @@
             <li>About</li>
         </ul>
     </nav>
-    <div class="container">
-        <h1>Best of Elina</h1>
-        <div class="songList"></div>
+    <div class="container">   
+        <div class="songList">
+            <h1>Best of Elina - No Copywrite</h1>
+            <div class="songListContainer">
+            <div class="songItem">
+                <img src="cover1.jpg" alt="1">
+                <span>Let me love you<span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+            </div>
+            <div class="songItem">
+                <img src="cover1.jpg" alt="1">
+                <span>Let me love you<span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+            </div>
+            <div class="songItem">
+                <img src="cover1.jpg" alt="1">
+                <span>Let me love you<span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+            </div>
+            <div class="songItem">
+                <img src="cover1.jpg" alt="1">
+                <span>Let me love you<span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+            </div>
+            <div class="songItem">
+                <img src="cover1.jpg" alt="1">
+                <span>Let me love you<span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+            </div>
+            <div class="songItem">
+                <img src="cover1.jpg" alt="1">
+                <span>Let me love you<span class="timestamp">05:34<i class="far fa-play-circle"></i></span></span>
+            </div>
+            </div>
+        </div>
         <div class="songBanner"></div>
     </div>
     <div class="bottom">
         <input type="range" name="range" id="myProgressBar" min=0 max=100>
         <div class="icons">
             <!--fontawesome icon!-->
+            
+            <i class="fas fa-3x fa-backward"></i>
+            <i class="far fa-3x fa-play-circle" id="masterPlay"></i>
+            <i class="fas fa-3x fa-forward"></i>
+            
+        </div>
+        <div class="songInfo">
+            <img src="playing.gif" alt="" width="42px">Let me love you - Justin Beiber
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/75cab67c6e.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
